--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "scripts": {
     "test": "mocha -R spec"
   },
+  "dependencies": {
+    "is-number": "^0.1.1"
+  },
   "devDependencies": {
     "mocha": "*",
     "should": "*"
@@ -47,8 +50,5 @@
     "range",
     "ranges",
     "sh"
-  ],
-  "dependencies": {
-    "repeat-string": "^0.2.2"
-  }
+  ]
 }
