--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "is-number": "^0.1.1",
+    "randomatic": "^1.0.1",
     "repeat-string": "^1.2.0"
   },
   "devDependencies": {
