--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "is-number": "^0.1.1",
     "randomatic": "^1.0.1",
+    "repeat-element": "^1.0.0",
     "repeat-string": "^1.2.0"
   },
   "devDependencies": {
