--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fill-range",
   "description": "Fill in a range of numbers or letters, optionally passing an increment or multiplier to use.",
-  "version": "1.7.1",
+  "version": "1.8.0",
   "homepage": "https://github.com/jonschlinkert/fill-range",
   "author": {
     "name": "Jon Schlinkert",
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "is-number": "^1.1.0",
+    "isobject": "^0.2.0",
     "randomatic": "^1.0.1",
     "repeat-element": "^1.0.0",
     "repeat-string": "^1.4.0"
