--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "devDependencies": {
     "benchmarked": "^0.1.3",
     "chalk": "^0.5.1",
-    "should": "*"
+    "should": "*",
+    "mocha": "^2.3.4"
   },
   "keywords": [
     "alpha",
