--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 sudo: false
 language: node_js
 node_js:
-  - "stable"
-  - "0.12"
-  - "0.10"
+  - node
+  - '6'
+  - '5'
+  - '0.12'
 matrix:
   fast_finish: true
   allow_failures:
-    - node_js: "0.10"
+    - node_js: '4'
+    - node_js: '0.12'
