--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "2.2.3",
   "homepage": "https://github.com/jonschlinkert/fill-range",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
+  "contributors": [
+    "Jon Schlinkert <jon.schlinkert@sellside.com> (http://twitter.com/jonschlinkert)",
+    "Paul Miller <paul+gh@paulmillr.com> (paulmillr.com)"
+  ],
   "repository": "jonschlinkert/fill-range",
   "bugs": {
     "url": "https://github.com/jonschlinkert/fill-range/issues"
@@ -20,16 +24,17 @@
     "test": "mocha"
   },
   "dependencies": {
-    "is-number": "^2.1.0",
-    "isobject": "^2.0.0",
-    "randomatic": "^1.1.3",
+    "is-number": "^3.0.0",
+    "isobject": "^2.1.0",
+    "randomatic": "^1.1.5",
     "repeat-element": "^1.1.2",
-    "repeat-string": "^1.5.2"
+    "repeat-string": "^1.5.4"
   },
   "devDependencies": {
-    "benchmarked": "^0.1.3",
-    "chalk": "^0.5.1",
-    "should": "*"
+    "ansi-cyan": "^0.1.1",
+    "benchmarked": "^0.2.5",
+    "mocha": "^3.0.2",
+    "yargs-parser": "^3.2.0"
   },
   "keywords": [
     "alpha",
@@ -38,6 +43,7 @@
     "brace",
     "expand",
     "expansion",
+    "fill",
     "glob",
     "match",
     "matches",
@@ -51,10 +57,10 @@
   "verb": {
     "related": {
       "list": [
-        "micromatch",
-        "expand-range",
         "braces",
-        "is-glob"
+        "expand-range",
+        "is-glob",
+        "micromatch"
       ]
     }
   }
