--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "isobject": "^2.1.0",
     "randomatic": "^1.1.5",
     "repeat-element": "^1.1.2",
-    "repeat-string": "^1.5.4"
+    "repeat-string": "^1.5.4",
+    "to-regex-range": "^0.1.2"
   },
   "devDependencies": {
     "mocha": "^3.0.2"
