--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "fill-range",
-  "description": "Fill in a range of numbers or letters, optionally passing an increment or multiplier to use.",
-  "version": "2.2.3",
+  "description": "Fill in a range of numbers or letters, optionally passing an increment or `step` to use, or create a regex-compatible range with `options.toRegex`",
+  "version": "3.0.0",
   "homepage": "https://github.com/jonschlinkert/fill-range",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
+  "contributors": [
+    "Jon Schlinkert <jon.schlinkert@sellside.com> (http://twitter.com/jonschlinkert)",
+    "Paul Miller <paul+gh@paulmillr.com> (paulmillr.com)"
+  ],
   "repository": "jonschlinkert/fill-range",
   "bugs": {
     "url": "https://github.com/jonschlinkert/fill-range/issues"
@@ -20,31 +24,31 @@
     "test": "mocha"
   },
   "dependencies": {
-    "is-number": "^2.1.0",
-    "isobject": "^2.0.0",
-    "randomatic": "^1.1.3",
-    "repeat-element": "^1.1.2",
-    "repeat-string": "^1.5.2"
+    "extend-shallow": "^2.0.1",
+    "is-number": "^3.0.0",
+    "repeat-string": "^1.5.4",
+    "to-regex-range": "^0.2.0"
   },
   "devDependencies": {
-    "benchmarked": "^0.1.3",
-    "chalk": "^0.5.1",
-    "should": "*",
-    "mocha": "^2.3.4"
+    "gulp-format-md": "^0.1.10",
+    "mocha": "^3.0.2"
   },
   "keywords": [
+    "array",
     "alpha",
     "alphabetical",
     "bash",
     "brace",
     "expand",
     "expansion",
+    "fill",
     "glob",
     "match",
     "matches",
     "matching",
     "number",
     "numerical",
+    "regex",
     "range",
     "ranges",
     "sh"
@@ -52,11 +56,26 @@
   "verb": {
     "related": {
       "list": [
-        "micromatch",
-        "expand-range",
         "braces",
-        "is-glob"
+        "to-regex-range",
+        "expand-range",
+        "micromatch"
       ]
-    }
+    },
+    "toc": true,
+    "layout": "default",
+    "tasks": [
+      "readme"
+    ],
+    "plugins": [
+      "gulp-format-md"
+    ],
+    "lint": {
+      "reflinks": true
+    },
+    "reflinks": [
+      "verb",
+      "verb-generate-readme"
+    ]
   }
 }
