--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "to-regex-range": "^1.0.2"
   },
   "devDependencies": {
+    "ansi-cyan": "^0.1.1",
+    "benchmarked": "^0.2.5",
     "gulp-format-md": "^0.1.11",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "yargs-parser": "^4.2.1"
   },
   "keywords": [
     "alpha",
