--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "test": "mocha"
   },
   "dependencies": {
-    "is-number": "^6.0.0",
-    "to-regex-range": "^4.0.0"
+    "is-number": "^7.0.0",
+    "to-regex-range": "^4.0.1"
   },
   "devDependencies": {
-    "ansi-cyan": "^0.1.1",
     "benchmarked": "^2.0.0",
     "gulp-format-md": "^1.0.0",
     "minimist": "^1.2.0",
-    "mocha": "^3.5.3"
+    "mocha": "^3.5.3",
+    "write": "^1.0.3"
   },
   "keywords": [
     "alpha",
