--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,10 @@ sudo: false
 os:
   - linux
   - osx
+  - windows
 language: node_js
 node_js:
   - node
   - '10'
   - '9'
   - '8'
-  - '7'
-  - '6'
-  - '5'
-  - '4'
