--- a/package.json
+++ b/package.json
@@ -24,14 +24,19 @@
     "node": ">=8"
   },
   "scripts": {
-    "test": "mocha"
+    "lint": "eslint --cache --cache-location node_modules/.cache/.eslintcache --report-unused-disable-directives --ignore-path .gitignore .",
+    "mocha": "mocha --reporter dot",
+    "test": "npm run lint && npm run mocha",
+    "test:ci": "npm run test:cover",
+    "test:cover": "nyc npm run mocha"
   },
   "dependencies": {
     "to-regex-range": "^5.0.1"
   },
   "devDependencies": {
     "gulp-format-md": "^2.0.0",
-    "mocha": "^6.1.1"
+    "mocha": "^6.1.1",
+    "nyc": "^15.1.0"
   },
   "keywords": [
     "alpha",
